--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp 404.html dist/",
+    "deploy": "npm run build && surge ./dist qiimeet-admin.surge.sh",
     "lint": "eslint .",
     "preview": "vite preview"
   },
