--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp 404.html dist/",
+    "build": "vite build && cp dist/index.html dist/200.html",
     "deploy": "npm run build && surge ./dist qiimeet-admin.surge.sh",
     "lint": "eslint .",
     "preview": "vite preview"
